# ReES

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: visualization.py
experiments/babilong-original-results/: babilong-original-benchmark-results.ipynb  original-baseline-llm.csv  original-rag-s.csv
experiments/babilong-rags/: RAG-S-datavis_output.ipynb  zero_shot_RAG_S.py
experiments/baseline-accuracy/: baseline-accuracy.py  baseline-vis.ipynb
experiments/chunk-size-search/: chunk-size-search-vis.ipynb  main.py
experiments/extract-neo4j/: main.py  scenes-delayed-summarisation-ablation-vis.ipynb
experiments/gliner-threshold/: gliner-vis.ipynb  main.py
experiments/main-accuracy/: accuracy-vis.ipynb  main.py  prompt-vis.ipynb
experiments/recursive-retrieval/: main.py  rr-vis.ipynb
experiments/summarisation-graph/: main.py
experiments/super-string-elimination/: main.py  sse-vis.ipynb
experiments/word-count/: word-count.ipynb
neo4j/: docker-compose.yml
src/ReES/: __init__.py  chunking.py  classification.py  env.py  knowledge.py  language.py  prompting.py  rees.py  retrievers.py  tokenizer.py  utility.py
src/ReES/aggregates/: knowledge.py  language.py  processing.py
src/ReES/babilong/: __init__.py  adapters.py
tests/: manual.py  stubs.py  test_babilong_adapter.py  test_chunking.py  test_main.py  test_utility.py
